// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Folder action should create an add action 1`] = `
Object {
  "type": "TDP_ADD_FOLDER",
}
`;

exports[`Folder action should create an closeAddFolderModal action 1`] = `
Object {
  "type": "TDP_CLOSE_ADD_FOLDER_MODAL",
}
`;

exports[`Folder action should create an closeRemoveFolderModal action 1`] = `
Object {
  "type": "TDP_CLOSE_REMOVE_FOLDER_MODAL",
}
`;

exports[`Folder action should create an open action 1`] = `
Object {
  "cmf": Object {
    "routerPush": "/preparations/42",
  },
  "id": 42,
  "type": "TDP_OPEN_FOLDER",
}
`;

exports[`Folder action should create an openAddFolderModal action 1`] = `
Object {
  "type": "TDP_OPEN_ADD_FOLDER_MODAL",
}
`;

exports[`Folder action should create an openRemoveFolderModal action 1`] = `
Object {
  "payload": Object {
    "name": "test",
  },
  "type": "TDP_OPEN_REMOVE_FOLDER_MODAL",
}
`;

exports[`Folder action should create an remove action 1`] = `
Object {
  "type": "TDP_REMOVE_FOLDER",
}
`;
